--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title: Your awesome title
 email: your-email@domain.com
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
-baseurl: "Unger"
-url: "http://webmakersteve.github.io/"
+baseurl: "/Unger"
+url: "http://webmakersteve.github.io"
 twitter_username: jekyllrb
 github_username:  jekyll
 
